--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -490,11 +490,11 @@ block content
                     //- .btn(data-modal="modal__order").btn_view_light.offer__btn
                     //-     .btn__text Записаться на консультацию
 
-                    +b.price-per-day 
-                        +e.wrapper 
-                            //- +e.close
-                            +e.text Водоснабжение и канализация<br>от 398 руб./день
-                            +e.btn Подробнее
+                    //- +b.price-per-day 
+                    //-     +e.wrapper 
+                    //-         //- +e.close
+                    //-         installment+e.text Водоснабжение и канализация<br>от 398 руб./день
+                    //-         +e.btn Подробнее
                     //- div 
                     //-     +b.installment
                     //-         +e.title Рассрочка
@@ -556,6 +556,203 @@ block content
 
 
             .content
+
+
+                section.container
+                    +b.title 
+                        +e.wrap
+                            +e.text С какими сложностями можно столкнуться?
+                    
+                    .row 
+                        .col.col_size_12.col_size-sm_12.col_size-md_6
+                            .box
+                                img(src="images/i34.png")
+                                div
+                                    h4 Несогласованность между подрядчиками
+                                    p Если заказчик получает услуги/документы по подключению отдельно, то может столкнуться с несогласованностью действий каждого из подрядчиков, что в итоге ставит под сомнение выполнимость объекта, увеличивает сроки и стоимость работ, иногда даже вводит ситуацию в заблуждение. 
+
+                        .col.col_size_12.col_size-sm_12.col_size-md_6
+                            .box
+                                img(src="images/i31.png")
+                                div
+                                    h4 Невозможность подключения 
+                                    p Если заказчик занимается подключением самостоятельно, он может получить отказ от ресурсоснабжающей организации по причине отсутствия технической возможности к подключению, но в действительности это не означает, что найти решение нельзя. Для этого и требуется комплексный командный подход.
+
+                        .col.col_size_12.col_size-sm_12.col_size-md_6
+                            .box
+                                img(src="images/i43.png")
+                                div
+                                    h4 Увеличение срока 
+                                    p Если заниматься организацией подключения сетей самостоятельно, то можно значительно увеличить срок общих работ. При подаче заявления на подключение заказчик принудительно получает договор  со строительством сетей ресурсоснабжающей организацией, сроком в 18 месяцев и нетвердой ценой договора. 
+
+                        .col.col_size_12.col_size-sm_12.col_size-md_6
+                            .box
+                                img(src="images/i11.png")
+                                div
+                                    h4 Сложности со сдачей сетей
+                                    p Это может произойти по разным причинам, начиная от того, что не все правоустанавливающие документы изначально были приведены в надлежащий вид, а также любые конкретные вопросы по качеству построенных сетей, соответствию проекту и т.д. В случае комплексного подхода это можно решить минимальными усилиями и затратами. 
+
+                        .col.col_size_12.col_size-sm_12.col_size-md_6
+                            .box
+                                img(src="images/i68.png")
+                                div
+                                    h4 Несоответствие проекту 
+                                    p Если вы распределяете работу на каждом этапе разным подрядным организациям, то можете встретиться с такой проблемой, когда сети будут построены не в полном соответствии проекту и возникнут проблемы со сдачей. Зачастую подрядчики и “шабашники” экономят и не придерживаются строительных правил. А бывает и такое, что после вскрытия обнаруживаются какие-то препятствия к строительству по проекту и подрядчик осознанно отклоняется от проекта, но не вносит коррективы в проект.
+
+                        .col.col_size_12.col_size-sm_12.col_size-md_6
+                            .box
+                                img(src="images/i44.png")
+                                div
+                                    h4 Время, деньги, нервы 
+                                    p Или трата рабочего времени. Если проводить подключение самостоятельно, не обращаясь в подрядную организацию, вам нужно будет уделять этому процессу много рабочего времени. Большинство инстанций принимает граждан только в определенные дни, там собираются большие очереди и не всегда можно получить желаемое с первого раза. Так вы потратите много времени, которое могло бы пройти более продуктивно.
+
+
+
+
+
+
+                section.container
+                    +b.title 
+                        +e.wrap
+                            +e.text Тарифы
+
+                    .table
+                        .table__wrapper
+                            table
+                                thead
+                                    tr
+                                        th
+                                        td Индивидуальные условия
+                                        td Экспресс-подключение
+                                        td Документальный экспресс
+
+                                tbody
+                                    tr 
+                                        th Кому подойдет: 
+                                        td
+                                            ul.list
+                                                li любые объекты (ижс, коммерческие, промышленные, муниципальные, совокупность ижс и т.д.)
+                                                li неограниченный список санитарных приборов (бассейн, автомойка, спецприборы для производств и т.д.)
+                                                li длина трубопровода до точки подключения не ограничена и рассчитывается согласно ТУ и проекту
+                                                li возможно строительство дополнительных сооружений (пожарные гидранты, краны и т.д.)
+                                        td
+                                            ul.list
+                                                li индивидуальный жилой дом класса стандарт (до 180 м2)
+                                                li наличие стандартных сантехприборов (унитаз, раковина, мойка, ванная, душ)
+                                                li правоустанавливающие документы - имеются и приведены в порядок
+                                                li длина сетей до точки подключения не превышает 25 м
+                                                li отсутствие конфликтов с Водоканалом
+
+                                        td
+                                            ul.list
+                                                li индивидуальный жилой дом класса стандарт (до 180 м2)
+                                                li наличие стандартных сантехприборов (унитаз, раковина, мойка, ванная, душ)
+                                                li правоустанавливающие документы - имеются и приведены в порядок
+                                                li сети водоснабжения и/или канализации уже построены
+                                                li длина сетей до точки подключения не превышает 25 м
+                                                li отсутствие конфликтов с Водоканалом
+                                    tr 
+                                        th Что входит в пакет: 
+                                        td
+                                            p Перечень мероприятий индивидуального подключения: 
+                                            ul.list.list_type_check
+                                                li предпроектные работы
+                                                li проектирование и согласование
+                                                li строительно-монтажные работы
+                                                li исполнительные документы
+                                                li ввод в эксплуатацию
+                                        td
+                                            p Экспресс-строительство и оформление сетей:
+                                            ul.list.list_type_check
+                                                li проектно-техническая документация
+                                                li оформление сетей в Водоканале
+                                                li открытие лицевого счета (документальный экспресс)
+                                                li исходно-разрешительная документация
+                                                li прокладка сетей сетей
+                                                li врезка/переподключение
+                                                li строительство колодца на точке врезки (при необходимости)
+                                        td
+                                            p Экспресс-оформление сетей:
+                                            ul.list.list_type_check
+                                                li геодезические изыскания
+                                                li работа с документами
+                                                li проектирование
+                                                li необходимые согласования
+                                                li исполнительная документация
+                                                li открытие лицевого счета
+                                                li заключение/переоформление договора
+
+                                    tr 
+                                        th Цена и срок:
+                                        td Устанавливаются исключительно индивидуально
+                                        td
+                                            p Срок: от 27 рабочих дней 
+                                            p Цена: от 130 000 рублей 
+                                        td
+                                            p Срок: от 21 рабочего дня
+                                            p Цена: от 53 000 рублей
+
+
+
+
+
+
+
+                
+                section.container
+                    +b.title 
+                        +e.wrap
+                            +e.text ПРИНЦИП ЗАВЕРШЕННОСТИ
+
+                    p Задачи, которые стоят перед специалистами - индивидуальны, но алгоритм действий, которые позволяют провести все мероприятия от начала до конца схож. 
+
+                    br
+                    br
+
+                    .center 
+                        h4 Он включает в себя 4 основных этапа:
+                        br
+
+                    .row 
+                        .col.col_size_12.col_size-sm_12.col_size-md_3
+                            +b.stage
+                                +e.number
+                                    span 1
+                                    |этап
+                                +e.header Обследование и предпроектное решение
+                                +e.body
+                                    +e.title 
+                                    +e.text Прежде чем БК Инвент заключает договор с заказчиком на подрядные работы, сотрудники компании тщательно обследуют местность, ознакамливаются с документами и предлагают предпроектное решение или даже ряд вариантов на выбор. Этот этап является фундаментальным в дальнейшем развитии ведения проекта. 
+
+                        .col.col_size_12.col_size-sm_12.col_size-md_3
+                            +b.stage
+                                +e.number
+                                    span 2
+                                    |этап
+                                +e.header Проектные работы
+                                +e.body
+                                    +e.title 
+                                    +e.text Начало реализации объекта производится от геодезических работ, инженерных расчетов, документооборота с ресурсоснабжающей организацией (Водоканал), получения технических условий и договора на техприсоединение, формирования проекта, как основного технического решения, и его согласования со всеми заинтересованными службами. 
+                        .col.col_size_12.col_size-sm_12.col_size-md_3
+                            +b.stage
+                                +e.number
+                                    span 3
+                                    |этап
+                                +e.header Строительно-монтажные работы
+                                +e.body
+                                    +e.title 
+                                    +e.text После создания полного пакета проектно-технической документации, объект передается к производителю работ, который полностью реализовывает это техническое решение на объекте. В процессе получается и согласовывается разрешительная документация, работы проводят как траншейным, так и бестраншейным способом. План работ, материалы и прочие нюансы предварительно согласовываются с заказчиком. 
+                        .col.col_size_12.col_size-sm_12.col_size-md_3
+                            +b.stage
+                                +e.number
+                                    span 4
+                                    |этап
+                                +e.header Ввод сетей в эксплуатацию
+                                +e.body
+                                    +e.title 
+                                    +e.text После того, как сети готовы к использованию, готовится пакет исполнительной документации: документы по строительству (акты скрытых работ, профиль прокола) и заключения по качеству готовых сетей (лабораторный анализ воды, акт МЧС о давлении, согласование в ИСОГД и т.д.) Когда все документы готовы, представитель Водоканала осуществляет принятие сетей и опломбирует счетчик, открывается лицевой счет, и заказчик пользуется коммуникациями в полном объеме. 
+
+                                    
 
 
                 section.container
