--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -3557,7 +3557,7 @@ img.zoom-img
             left auto
             position relative
             width auto
-            min-width 200px
+            min-width 150px
 
 .flex
     display flex
@@ -4218,7 +4218,7 @@ blog_size($n)
     &_type_objects
         background #FFFFFF
         border 1px solid rgba(231, 231, 231, 0.35)
-        box-sizing border-box
+        box-sizing border-bolx
         box-shadow 0px 2px 10px rgba(0, 0, 0, 0.1)
         border-radius 10px
         .slider__body
@@ -4366,3 +4366,18 @@ blog_size($n)
             border-radius 80px
             display block
             padding 10px 25px 
+
+.box
+    margin-bottom 20px
+    background #fff
+    border 1px solid rgba(231,231,231,0.35)
+    box-sizing border-box
+    box-shadow 0px 2px 10px rgba(0,0,0,0.1)
+    border-radius: 10px
+    padding 10px 20px 10px 15px
+    display flex
+    align-items center
+
+    img
+        width 40px 
+        margin-right 10px    
