--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -483,7 +483,7 @@ block content
                                           
 
         .main
-            +b.offer(style="background-image:url(images/offer1.jpg);")#ddd
+            +b.offer(style="background-image:url(images/offer1.jpg);")
                 +e.wrapper.container
                     +e.title Водоснабжение и канализация для частных домов
                     +e.description Работаем в Ростов-на-дону и Ростовской области
@@ -525,38 +525,98 @@ block content
             //-     +e.text Записаться на консультацию
             
 
-        
 
 
-            //- +b.process
-            //-     +e.bg(style="background: url(images/process-bg.png);")
-            //-     +e.item(style="left: 500px;top: -28px;")
-            //-         +e.image
-            //-             img(src="images/i63.png")
-            //-             span 1
-            //-         +e.body
-            //-             +e.title Заявка
-            //-             +e.text Вы звоните или заполняете форму обратной связи
 
-            //-     +e.item(style="left: -79px; top: 300px").process__item_direction_right
-            //-         +e.image
-            //-             img(src="images/i3.png")
-            //-             span 3
-            //-         +e.body(style="width: 300px")
-            //-             +e.title Подписание договора
-            //-             +e.text Вы получаете коммерческое предложение и договор на согласование. После подписания договора, вносите первый аванс
 
-            //-     +e.item(style="left: 672px; top: 250px;")
-            //-         +e.image
-            //-             img(src="images/i63.png")
-            //-             span 1
-            //-         +e.body
-            //-             +e.title Заявка
-            //-             +e.text Вы звоните или заполняете форму обратной связи
+
+
+
+          
 
 
             .content
 
+                section.container
+
+                    +b.title 
+                        +e.wrap
+                            +e.text КОМПЛЕКСНЫЙ ПОДХОД
+
+                    p Комплексный подход позволяет учесть и решить все вопросы, которые ставит перед компанией заказчик в ходе реализации проекта, а также закрепляет за собой полную ответственность за поставленный результат - функционирующая сеть водопровода и канализации, оформленная в Водоканале. 
+
+                    p В процессе подключения сетей воды и канализации участвуют разнопрофильные сотрудники, а именно юристы, специалисты по коммуникациям, инженеры-проектировщики, инженеры-сметчики, производители работ, специалисты по стройконтролю, инженеры-геодезисты и т.д. 
+                
+
+                    +b.process
+                        +e.bg(style="background: url(https://puppets-nsk.ru/sites/default/files/pictures/tandwiel.gif);background-position: center;background-repeat: no-repeat;background-size: 422px;")
+                        //- +e.bg(style="background: url(images/integrated-approach.png);")
+
+                        +e.item(style="left: 476px;top: -60px;")
+                            +e.image
+                                img(src="images/i6.png")
+                            +e.body(style="width: 400px")
+                                +e.title Правовая сторона
+                                +e.text  обеспечение грамотного построения стратегии в рамках документооборота при подключении, помощь в правоустанавливающих задачах, согласованиях и т.д.
+
+                        +e.item(style="left: -50px; top: 20px").process__item_direction_right
+                            +e.image
+                                img(src="images/i52.png")
+                            +e.body(style="width: 330px")
+                                +e.title Инженеры-геодезисты
+                                +e.text целенаправленное и тщательное обследование местности с уклоном на проводимую коммуникацию позволяют изначально создать информативное поле для проектирования, что впоследствии исключает погрешности в работах
+
+                        +e.item(style="left: 662px; top: 83px;")
+                            +e.image
+                                img(src="images/i61.png")
+                            +e.body(style="width: 350px")
+                                +e.title Коммуникация с ресурсоснабжающими организациями
+                                +e.text опыт длительного сотрудничества с таковыми позволяет найти нестандартные решения, удовлетворяющие как заказчика, так и в последствии обслуживающую сети компанию
+                        
+                        +e.item(style="left: 662px; top: 313px;")
+                            +e.image
+                                img(src="images/i60.png")
+                            +e.body(style="width: 320px")
+                                +e.title Проектно-инженерная компетенция
+                                +e.text нахождение экономически выгодного, технически целесообразного, а также реально выполнимого решения воплощения ТУ
+
+                    
+                        +e.item(style="left: -41px; top: 313px").process__item_direction_right
+                            +e.image
+                                img(src="images/i3.png")
+                            +e.body(style="width: 300px")
+                                +e.title Строительная деятельность
+                                +e.text слаженная работа техники, надежные связи с поставщиками и высокая компетенция команды позволяют осуществлять работы организовано, экономически эффективно и с долговечным качеством
+
+
+                        +e.item(style="left: 462px;top: 464px;")
+                            +e.image
+                                img(src="images/i48.png")
+                            +e.body(style="width: 460px")
+                                +e.title Внутренний технадзор
+                                +e.text контроль соответствия выполняемых на строительстве работ тем решениям, которые были заложены в разработанном и согласованном проекте во избежание ошибок в функционировании сетей
+
+                    .row 
+                        .col.col_size_12.col_size-sm_12.col_size-md_6.col_offset-md_3
+                            blockquote Длительный опыт подключений специалистами БК Инвент еще на этапе предпроектного решения дает возможность предложить заказчику такой вариант, который в действительности будет выгодным, долговечным и перспективным.
+
+
+                section.container
+
+                    +b.steps
+                        +e.item
+                            +e.icon 1
+                            | Оставьте заявку на консультацию с ведущим специалистом БК Инвент или свяжитесь с нами по  номеру телефона 88633101202
+                            .btn.btn_view_action.steps__btn
+                                .btn__text Оставить заявку
+                        +e.arrow
+                        +e.item 
+                            +e.icon 2
+                            | Специалист предоставит исчерпывающую консультацию. Проведем обследование объекта для выяснения подробностей. На основании обследования сформируется коммерческое предложение, далее заключается подрядный договор. Начинается процесс производства: выполняются все необходимые работы по проектированию и монтажу. Производится запуск инженерной системы.
+                        +e.arrow
+                        +e.item 
+                            +e.icon 3
+                            | Вы получаете полную функционирующую систему водоснабжения и водоотведения для объектов направленных на различные сферы деятельности от индивидуальных жилых домов до промышленных объектов. Ресурсы компании в сочетании с грамотным, высококвалифицированным персоналом, позволяют провести весь цикл работ гарантируя высокое долговечное качество.
 
                 section.container
                     +b.title 
