--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -4297,12 +4297,12 @@ blog_size($n)
             top 24px
             right 10px
 
-.price-per-day
+// .price-per-day
 
-    position relative
-    width 100%
-    @media (min-width 1290px)
-        height 50px
+//     position relative
+//     width 100%
+//     @media (min-width 1290px)
+//         height 50px
    
     // @media (min-width 700px)
     //     position relative
@@ -4332,40 +4332,40 @@ blog_size($n)
     //     &:after
     //         transform rotate(45deg)
 
-    &__text
-        font-size 18px
-        line-height 1.3em
+    // &__text
+    //     font-size 18px
+    //     line-height 1.3em
 
-    &__btn
-        font-size 16px
-        background #00000026
-        display inline-block
-        padding 3px 10px
-        margin-top 5px
-        border-radius 50px
+    // &__btn
+    //     font-size 16px
+    //     background #00000026
+    //     display inline-block
+    //     padding 3px 10px
+    //     margin-top 5px
+    //     border-radius 50px
 
-    &__wrapper
-        text-align center
-        z-index 100 
-        background #ddd
-        cursor pointer
-        display table
-        padding 15px 20px 
-        border-radius 50px
-        margin 30px auto 10px auto
-        color #fff
-        text-shadow 0 1px 10px #00000080
-        background-image: linear-gradient( 135deg, #97ABFF 10%, #123597 100%);
-        @media (min-width 1290px)
-            box-shadow 0 0 10px 5px #b1b1b140
-            position absolute
-            left calc(100% - 140px)
-            bottom -20px
-            width 200px
-            // height 100px
-            border-radius 80px
-            display block
-            padding 10px 25px 
+    // &__wrapper
+    //     text-align center
+    //     z-index 100 
+    //     background #ddd
+    //     cursor pointer
+    //     display table
+    //     padding 15px 20px 
+    //     border-radius 50px
+    //     margin 30px auto 10px auto
+    //     color #fff
+    //     text-shadow 0 1px 10px #00000080
+    //     background-image: linear-gradient( 135deg, #97ABFF 10%, #123597 100%);
+    //     @media (min-width 1290px)
+    //         box-shadow 0 0 10px 5px #b1b1b140
+    //         position absolute
+    //         left calc(100% - 140px)
+    //         bottom -20px
+    //         width 200px
+    //         // height 100px
+    //         border-radius 80px
+    //         display block
+    //         padding 10px 25px 
 
 .box
     margin-bottom 20px
@@ -4381,3 +4381,58 @@ blog_size($n)
     img
         width 40px 
         margin-right 10px    
+
+
+.steps
+    margin 20px 0
+    @media (min-width 860px) 
+        display flex
+    // align-items center
+    &__btn
+        margin 15px auto
+        width auto
+        display table
+    &__arrow
+        @media (max-width 860px)
+            display none 
+        position relative
+        width 180px 
+        margin 0 10px
+        &:before
+        &:after
+            content ''
+            position absolute
+            width 50px
+            height 2px
+            background #4274d6
+            // left auto 
+            // right 58px
+        &:before
+            transform rotate(45deg)
+            top calc(50%)
+            // left 10px
+        &:after
+            transform rotate(-45deg)
+            top calc(50% + 34px)
+            // left 10px
+    &__item
+        border 1px solid rgba(231,231,231,0.35)
+        box-sizing border-box
+        box-shadow 0px 2px 10px rgba(0,0,0,0.1)
+        border-radius 10px
+        padding 10px 20px 10px 15px
+        width 100%
+        margin 20px 0
+        line-height 1.45em
+        font-size  13px
+
+    &__icon
+        margin 5px auto 10px auto
+        border-radius 100%
+        text-align center
+        line-height 45px
+        font-size 22px 
+        color #fff
+        width 45px
+        height 45px 
+        background linear-gradient(156.8deg, #2592CF 15%, #2761A5 82.67%)
