--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -682,28 +682,64 @@ block content
                                 thead
                                     tr
                                         th
-                                        td Индивидуальные условия
-                                        td Экспресс-подключение
-                                        td Документальный экспресс
+                                        td(style="width: 31%;") 
+                                            b Пакет “Документальный экспресс” (оформление существующих сетей воды и/или канализации)
+                                        td(style="width: 31%;")  
+                                            b Пакет “Документально-строительный экспресс” (ускоренное строительство и оформление сетей воды и/или канализации)
+                                        td(style="width: 100%;")  
+                                            b Пакет “Индивидуальные условия подключения водоснабжения и/или канализации)
+
+
 
                                 tbody
                                     tr 
-                                        th Кому подойдет: 
+                                        th 
+                                            b Что входит в пакет
+
+ 
                                         td
                                             ul.list
-                                                li любые объекты (ижс, коммерческие, промышленные, муниципальные, совокупность ижс и т.д.)
-                                                li неограниченный список санитарных приборов (бассейн, автомойка, спецприборы для производств и т.д.)
-                                                li длина трубопровода до точки подключения не ограничена и рассчитывается согласно ТУ и проекту
-                                                li возможно строительство дополнительных сооружений (пожарные гидранты, краны и т.д.)
+                                                li геодезические изыскания
+                                                li инженерные расчеты
+                                                li работа с документами
+                                                li проектирование
+                                                li необходимые согласования
+                                                li исполнительная документация
+                                                li взаимодействия со всеми заинтересованными службами
+                                                li открытие лицевого счета
+                                                li заключение/переоформление договора
                                         td
                                             ul.list
-                                                li индивидуальный жилой дом класса стандарт (до 180 м2)
-                                                li наличие стандартных сантехприборов (унитаз, раковина, мойка, ванная, душ)
-                                                li правоустанавливающие документы - имеются и приведены в порядок
-                                                li длина сетей до точки подключения не превышает 25 м
-                                                li отсутствие конфликтов с Водоканалом
+                                                li проектно-техническая документация, оформление сетей в Водоканале, открытие лицевого счета (документальный экспресс)
+                                                li оформление строительной документации
+                                                li строительно-монтажные работы: прокладка сетей, врезка в центральную магистраль,  строительство колодца на точке врезки (при необходимости)
 
                                         td
+                                            ul.list
+                                                li предпроектное решение, кадастровые, геодезические работы
+                                                li техническое сопровождение в подготовке общей архитектуры технических условий
+                                                li взаимодействие с ресурсоснабжающей организацией
+                                                li изготовление рабочей проектной документации, согласование со всеми заинтересованными организациями, 
+                                                li строительно-монтажные работы по проекту, согласно СП, СНиП любой сложности
+                                                li изготовление исполнительной документации (в том числе лабораторные исследования, гидравлические испытания, испытания МЧС на пожарную безопасность и т.д.)
+                                                li ввод построенных сетей в эксплуатацию, открытие лицевого счета, получение договор
+                                    tr 
+                                        th 
+                                            b Сроки реализации услуг
+                                        td
+                                            p от 21 рабочего дня
+
+
+                                        td
+                                            p от 27 рабочих дней 
+                                        td
+                                            p устанавливается исключительно индивидуально на этапе обследования объекта и формирования предпроектного решения
+
+
+                                    tr 
+                                        th 
+                                            b Условия, для которых подходит пакет
+                                        td 
                                             ul.list
                                                 li индивидуальный жилой дом класса стандарт (до 180 м2)
                                                 li наличие стандартных сантехприборов (унитаз, раковина, мойка, ванная, душ)
@@ -711,51 +747,28 @@ block content
                                                 li сети водоснабжения и/или канализации уже построены
                                                 li длина сетей до точки подключения не превышает 25 м
                                                 li отсутствие конфликтов с Водоканалом
+                                        td
+                                            ul.list
+                                                li индивидуальный жилой дом класса стандарт (до 180 м2)                                                
+                                                li наличие стандартных сантехприборов (унитаз, раковина, мойка, ванная, душ)
+                                                li правоустанавливающие документы - имеются и приведены в порядок
+                                                li длина сетей до точки подключения не превышает 25 м
+                                                li отсутствие конфликтов с Водоканалом
+                                        td
+                                            ul.list
+                                                li объекты ЛЮБОГО назначения (ижс, коммерческие, промышленные, муниципальные, поселки, СНТ и т.д.)
+                                                li неограниченный список и мощность санитарных приборов (бассейн, автомойка, спецприборы для производств и т.д.)
+                                                li длина трубопровода до точки подключения не ограничена и рассчитывается согласно ТУ и проекту
+                                                li возможно строительство дополнительных сооружений (пожарные гидранты, краны и т.д.)
                                     tr 
-                                        th Что входит в пакет: 
+                                        th 
+                                            b Стоимость пакета
                                         td
-                                            p Перечень мероприятий индивидуального подключения: 
-                                            ul.list.list_type_check
-                                                li предпроектные работы
-                                                li проектирование и согласование
-                                                li строительно-монтажные работы
-                                                li исполнительные документы
-                                                li ввод в эксплуатацию
+                                            p от 36054 рублей 
                                         td
-                                            p Экспресс-строительство и оформление сетей:
-                                            ul.list.list_type_check
-                                                li проектно-техническая документация
-                                                li оформление сетей в Водоканале
-                                                li открытие лицевого счета (документальный экспресс)
-                                                li исходно-разрешительная документация
-                                                li прокладка сетей сетей
-                                                li врезка/переподключение
-                                                li строительство колодца на точке врезки (при необходимости)
-                                        td
-                                            p Экспресс-оформление сетей:
-                                            ul.list.list_type_check
-                                                li геодезические изыскания
-                                                li работа с документами
-                                                li проектирование
-                                                li необходимые согласования
-                                                li исполнительная документация
-                                                li открытие лицевого счета
-                                                li заключение/переоформление договора
-
-                                    tr 
-                                        th Цена и срок:
-                                        td Устанавливаются исключительно индивидуально
-                                        td
-                                            p Срок: от 27 рабочих дней 
-                                            p Цена: от 130 000 рублей 
-                                        td
-                                            p Срок: от 21 рабочего дня
-                                            p Цена: от 53 000 рублей
-
-
-
-
-
+                                            p от 113652 рублей
+                                        td 
+                                            p определяется индивидуально, согласно смете на выполнение работ
 
 
                 
